--- a/Pagina_Principal/templates/noticia.html
+++ b/Pagina_Principal/templates/noticia.html
@@ -4,6 +4,7 @@
 
 {% block conteudo %}
 
+
 <figure class="text-center">
     <br>
     <blockquote class="blockquote">
@@ -16,7 +17,7 @@
 
 <br>
 
-<p> {{ noticia.conteudo }} </p>
+<p class="conteudo"> {{ noticia.conteudo }} </p>
 
 <br>
 
