--- a/Usuario/templates/login.html
+++ b/Usuario/templates/login.html
@@ -24,18 +24,18 @@
 
 
                     <div style="text-align: left;" class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Nome Completo:</label>
+                        <label for="nickname" class="form-label">Nome Completo:</label>
                         <input type="name" class="form-control" id="nickname" name="username">
                     </div>
 
                     <div style="text-align: left;" class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email:</label>
+                        <label for="email" class="form-label">Email:</label>
                         <input type="email" class="form-control" id="email" name="email">
                     </div>
 
 
                     <div style="text-align: left;" class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Senha:</label>
+                        <label for="password" class="form-label">Senha:</label>
                         <input type="password" class="form-control" id="password" name="senha">
                     </div>
                     <button type="submit" class="btn btn-success">LOGAR</button>
